added role/approve endpoint
